Allow use of non jks files for private and public keys